@@ -2345,6 +2345,19 @@ Namespace My
                 Me("ThemeName") = value
             End Set
         End Property
+        
+        <Global.System.Configuration.UserScopedSettingAttribute(),  _
+         Global.System.Configuration.SettingsProviderAttribute(GetType(mRemoteNG.Config.Settings.Providers.ChooseProvider)),  _
+         Global.System.Diagnostics.DebuggerNonUserCodeAttribute(),  _
+         Global.System.Configuration.DefaultSettingValueAttribute("True")>  _
+        Public Property ShowConfigHelpText() As Boolean
+            Get
+                Return CType(Me("ShowConfigHelpText"),Boolean)
+            End Get
+            Set
+                Me("ShowConfigHelpText") = value
+            End Set
+        End Property
     End Class
 End Namespace
 
