@@ -568,6 +568,9 @@
             <setting name="ThemeName" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ShowConfigHelpText" serializeAs="String">
+                <value>True</value>
+            </setting>
         </mRemoteNG.My.MySettings>
     </userSettings>
     <applicationSettings>
