@@ -1,4 +1,5 @@
   Added feature MR-345 - Two separate options for confirming closure of Tabs and Connection Panels
+  Added feature MR-346 - Option to show/hide the description box at the bottom of the Config panel
   Fixed issue MR-354 - Re-ordering tabs doesn't give good, reliable visual feedback
   Fixed issue MR-377 - Several redundant panels can be opened
   Fixed issue MR-379 - Connection variables not working with external tools
